--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -5,38 +5,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@drawable/gradient_bg"
+    android:background="#FFFFFF"
     tools:context=".AddExpenseActivity">
 
+    <LinearLayout
+        android:id="@+id/top"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:orientation="vertical"
+        android:background="#FF630A74"
+        android:gravity="center_vertical">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/backIv"
+                android:onClick="backIv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_chevron_left_black_24dp"
+                android:layout_marginLeft="5dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
+                android:textSize="20dp"
+                android:text="Add Expense"
+                android:layout_toRightOf="@+id/backIv" />
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 
-    <ImageView
-        android:id="@+id/backIv"
-        android:onClick="backIv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_chevron_left_black_24dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="10dp"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#FFFFFF"
-        android:textSize="20dp"
-        android:text="Add Expense"
-        android:layout_toRightOf="@+id/backIv"
-        android:layout_marginTop="10dp"/>
+
 
     <Spinner
         android:id="@+id/spinner"
-        android:padding="15dp"
-        android:layout_marginTop="15dp"
+        android:padding="12dp"
+        android:layout_marginTop="8dp"
         android:textAlignment="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/backIv"
-        android:layout_centerInParent="true"/>
+        android:layout_below="@+id/top"
+        android:layout_centerInParent="true" />
     <LinearLayout
         android:id="@+id/horizontalLyt"
         android:layout_width="match_parent"
@@ -49,14 +65,14 @@
 
         <EditText
             android:id="@+id/dateEt"
-            android:background="#1AFFFFFF"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:hint="Date"
-            android:padding="15dp"
-            android:textColorHint="#B3B6B7"
-            android:focusable="false"/>
+            android:padding="12dp"
+            android:textColor="#000000"
+            android:background="@drawable/edit_text"
+            android:focusable="false" />
 
         <View
             android:layout_width="5dp"
@@ -68,15 +84,15 @@
             android:layout_height="wrap_content"
             android:layout_weight=".5"
             android:hint="Time (Optional)"
-            android:background="#1AFFFFFF"
-            android:padding="15dp"
-            android:textColorHint="#B3B6B7"
-            android:focusable="false"/>
+            android:textColor="#000000"
+            android:padding="12dp"
+            android:background="@drawable/edit_text"
+            android:focusable="false" />
 
     </LinearLayout>
 
     <EditText
-        android:padding="15dp"
+        android:padding="12dp"
         android:id="@+id/addExpenseEt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -84,21 +100,21 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
-        android:background="#1AFFFFFF"
         android:hint="Enter Expense Amount"
+        android:background="@drawable/edit_text"
         android:inputType="number"
-        android:textColorHint="#B3B6B7"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#000000"
+        />
 
     <ImageView
         android:id="@+id/documentIv"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:layout_below="@+id/cancelDocumentBtn"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:visibility="gone"
         android:src="@drawable/ic_image_black_24dp"/>
 
@@ -110,7 +126,7 @@
         android:text="Add Image (Optional)"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:layout_below="@id/horizontalLyt"
@@ -125,7 +141,7 @@
         android:text="Cancel Adding Image"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:layout_below="@id/horizontalLyt"
@@ -139,7 +155,7 @@
         android:text="Save"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:layout_below="@id/addDocumentBtn"
@@ -160,11 +176,12 @@
         android:visibility="gone">
 
         <Button
-            android:id="@+id/gotoGalleryBtn"
+            android:id="@+id/gotoCameraBtn"
+            android:onClick="gotoCameraBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:text="Gallery"
+            android:text="Camera"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
             android:background="@drawable/curve_btn"
@@ -173,11 +190,12 @@
             android:layout_width="10dp"
             android:layout_height="0dp"/>
         <Button
-            android:id="@+id/gotoCameraBtn"
+            android:id="@+id/gotoGalleryBtn"
+            android:onClick="gotoGalleryBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
-            android:text="Camera"
+            android:text="Gallery"
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
             android:background="@drawable/curve_btn"
@@ -192,7 +210,7 @@
         android:text="Save"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:layout_below="@id/buttonLyt"
