--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -12,7 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Dashboard"
+        android:textStyle="bold"
         android:textColor="#630A74"
+        android:textSize="15dp"
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"/>
 
@@ -32,30 +34,33 @@
         <Spinner
             android:textAlignment="center"
             android:layout_width="0dp"
-            android:layout_weight="1"
+            android:layout_weight="1.20"
             android:layout_height="wrap_content"
-            android:id="@+id/spinner"/>
+            android:id="@+id/spinner"
+            />
+
 
         <TextView
-            android:id="@+id/datePickerTv"
+            android:id="@+id/fromDateTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight=".90"
             android:text="From Day"
             android:textColor="#000000"
-            android:drawableLeft="@drawable/ic_date_range_black_24dp"
-            android:drawablePadding="5dp"/>
+            android:drawablePadding="2dp"
+            android:drawableLeft="@drawable/ic_date_range_black_24dp"/>
+
 
 
         <TextView
-            android:id="@+id/timePickerTv"
+            android:id="@+id/toDateTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight=".90"
             android:text="To Day"
             android:textColor="#000000"
-            android:drawableLeft="@drawable/ic_access_time_black_24dp"
-            android:drawablePadding="5dp"/>
+            android:drawablePadding="2dp"
+            android:drawableLeft="@drawable/ic_date_range_black_24dp"/>
     </LinearLayout>
 
     <Button
@@ -64,7 +69,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Show"
-        android:textColor="#630A74"
+        android:textColor="#000000"
         android:background="@drawable/btn_modern"
         android:layout_marginLeft="30dp"
         android:layout_centerInParent="true"
@@ -79,6 +84,7 @@
         android:src="@drawable/ic_add_black_24dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_margin="30dp"/>
+        android:layout_margin="30dp"
+        android:background="#630A74"/>
 
 </RelativeLayout>
