--- a/app/src/main/res/layout/custom_model_design.xml
+++ b/app/src/main/res/layout/custom_model_design.xml
@@ -51,6 +51,13 @@
             </LinearLayout>
 
             <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:textColor="#000000"
+                android:text="BDT"
+                android:layout_gravity="center_vertical"/>
+            <TextView
                 android:id="@+id/amountTv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -59,13 +66,7 @@
                 android:text="BDT"
                 android:layout_gravity="center_vertical"/>
 
-            <ImageView
-                android:id="@+id/menuIv"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight=".5"
-                android:src="@drawable/ic_more_vert_black_24dp"
-                android:layout_gravity="center_vertical"/>
+
 
         </LinearLayout>
 
